test/expected/declare_rti.out
declare i as restricted int
        ^
9: error: built-in type can not be "restrict"
